# multimodal_llm_pretraining

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  slurm.toml
.github/workflows/: main.yml
experiments/: __init__.py  __tango__.py  __torchrunx__.py  config.py  count_flops.py  count_flops_sweep.py  training_time_analytic.py  training_time_analytic_sweep.py  training_time_empirical.py  training_time_empirical_sweep.py
experiments/sweep_configs/training_time_analytic/: all.json
experiments/sweep_configs/training_time_empirical/: all_naive.json  all_optimized.json  pythia_optimized.json
experiments/utils/: __tango__.py  base_classes.py  distribute.py  slurm.py
scripts/: benchmark.py  print_huggingface_arguments.py  print_optimal_config.py  to_training_arguments.py  training.py  training_llava.py
scripts/plotting/: __init__.py  feasibility_chart.py  gpu_days.py  mem_saving_methods.py  model_flops.py  optimal_memory_saving_speedups.py  preprocess_survey.py  survey.py  training_costs.py  training_time_avg.py  training_time_tables.py
src/: gpus.py  train.py
src/benchmarking/: data.py  flops.py  max_batch_size.py  step_time.py  utils.py
src/data/: llava_data.py  scienceqa.py  vilt_data.py
src/models/: __init__.py  convnext.py  llava.py  mamba.py  pythia.py  roberta.py  vilt.py  vilt_original.py  vit.py
sweep_configs/count_flops/: all.json  pythia.json
sweep_configs/training_time_analytic/: pythia.json
sweep_configs/training_time_empirical/: benchmark.json  pythia_naive.json
